--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,11 @@ h2 {
   text-shadow: 3px 2px #33A8DB;
 }
 
+#professional-challenges{
+  text-align: center;
+  width: 800px;
+}
+
 #professional-challenges img {
   margin: 32px 0;
 }
